--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,22 @@
     padding: 15px 30px;
     cursor: pointer;
   }
+  .pause-drop{
+float: right;
+display: none;
 
+  }
+
+   /* Adjust margins to create spacing between buttons */
+   #btnPause {
+    
+    margin-bottom: 10px;
+  }
+
+  /* Adjust margins to create spacing between buttons */
+  #btnDrop {
+    margin-top: 5px;
+  }
   .compass-button {
     width: 40px;
     height: 40px;
@@ -34,32 +49,46 @@
   }
   
   .north {
-    margin-bottom: 10px;
+    margin-bottom: 2px;
   }
   
   .south {
-    margin-top: 10px;
+    margin-top: 2px;
   }
   
-  .west,
+  .west{
+    margin-right: 10px;
+
+  }
   .east {
-    width: 20px;
-    height: 40px;
+    margin-left: 10px;
   }
   
   .directional-pad {
-    display: none; /* Initially hide the directional pad */
+     /* Initially hide the directional pad */
+     display: none;
+
   }
   
   @media (max-width: 768px) {
     /* Show the directional pad only on screens smaller than 768px */
     .directional-pad {
+      float: left;
       display: flex;
       flex-direction: column;
-      flex-wrap: wrap;
+      justify-content: center;
       align-items: center;
       /* justify-content: center; */
       margin-top: 20px;
     }
+
+    .pause-drop{
+      display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        margin-top: 20%;
+        width: 30%;
+        height: 30%;
+        }
   }
   
